@@ -226,8 +226,8 @@ class ManualPageTranslator(BaseTranslator):
     # overwritten -- don't emit a warning for images
     def visit_image(self, node):
         if 'alt' in node.attributes:
-            self.body.append('[image: %s]\n' % node['alt'])
-        self.body.append('[image]\n')
+            self.body.append(_('[image: %s]') % node['alt'] + '\n')
+        self.body.append(_('[image]') + '\n')
         raise nodes.SkipNode
 
     # overwritten -- don't visit inner marked up nodes
