@@ -1,6 +1,8 @@
 Release 1.0.8 (in development)
 ==============================
 
+* #720: Add dummy visitors for graphviz nodes for text and man.
+
 * #704: Fix image file duplication bug.
 
 * #677: Fix parsing of multiple signatures in C++ domain.
